# tree-sitter-iiidmini

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-iiidmini.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_iiidmini/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterIIIDMini/: iiidmini.h
bindings/swift/TreeSitterIIIDMiniTests/: TreeSitterIIIDMiniTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: based3dx.txt  statement.txt
