[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-iiidmini"
description = "3DM Parser"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "iiidmini"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Leandro Torrez", email = "leotorrez@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "http://github.com/leotorrez/tree-sitter-iiidmini"
Funding = "http://github.com/leotorrez/tree-sitter-iiidmini"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
